# uling

./: .gitignore  Cargo.toml  LICENSE  README.markdown
.github/workflows/: crawly.yml  rust.yml  tately.yml  xmlify.yml
crawly/: Cargo.toml  README.markdown
crawly/src/: main.rs
crawly/src/modules/: cli.rs  mod.rs  search.rs
tately/: Cargo.toml  README.markdown
tately/src/: main.rs
tately/src/modules/: annotate.rs  annotations.rs  cli.rs  mod.rs  utterances.rs
test/: annotations.xml  speech.txt  speech_annotated.xml  speech_annotated_noun.xml  test.txt
xmlify/: Cargo.toml  README.markdown
xmlify/src/: main.rs
