[package]
name = "crawly"
version = "1.0.0"
edition = "2021"
license = "MIT"
authors = ["Angel Dollface"]
description= ""
homepage = "https://github.com/angeldollface/uling/crawly"
repository = "https://github.com/angeldollface/uling/crawly"
documentation = "https://github.com/angeldollface/uling/crawly"
readme = "README.markdown"
keywords = [
  "text scraping"
]
categories = [
  "text scraping"
]

[dependencies]
coutils = { git = "https://github.com/angeldollface/coutils", version="1.0.0" }
cleasy = { git = "https://github.com/angeldollface/cleasy", version = "1.3.0" }

[[bin]]
name = "crawly"
path = "src/main.rs"
