[package]
name = "tately"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Angel Dollface"]
description= "Annotate speech with tags you define."
homepage = "https://github.com/angeldollface/uling/tately"
repository = "https://github.com/angeldollface/uling/tately"
documentation = "https://github.com/angeldollface/uling/tately"
readme = "README.markdown"
keywords = [
  "annotation",
  "linguistics"
]
categories = [
  "annotation",
  "linguistics"
]

[dependencies]
serde = "1.0.163"
serde-xml-rs = "0.6.0"
serde_derive = "1.0.163"
coutils = { git = "https://github.com/angeldollface/coutils", version="1.0.0" }
cleasy = { git = "https://github.com/angeldollface/cleasy", version = "1.3.0" }

[[bin]]
name = "tately"
path = "src/main.rs"
